<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.augustana.csc490.animalfinder.MainActivity"
    android:background="#ff015f10">

    <TextView
        android:text="@string/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffe758"
        android:textSize="27dp"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_level"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textColor="#ffffe758"
        android:textSize="20dp"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:id="@+id/easyButton"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:id="@+id/mediumButton"
        android:layout_below="@+id/easyButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardButton"
        android:id="@+id/hardButton"
        android:layout_below="@+id/mediumButton"
        android:layout_alignLeft="@+id/mediumButton"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/mediumButton" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_goal"
        android:id="@+id/textView3"
        android:layout_below="@+id/hardButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:textColor="#ffffe758"
        android:textSize="20dp" />

</RelativeLayout>
